delete db file and change db

--- a/todo_crud.backend/todo_crud.backend.API/appsettings.json
+++ b/todo_crud.backend/todo_crud.backend.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteDb": "Data Source = app.db"
+    "SqliteDb": "Data Source = Todo.db"
   }
 }
